160825_1209	Print estimated current in already set min/max (+bug fix in min)
160829_1200	Move min/max voltage conflict to error processing.
160830_0001	Added summary line after resistor propagation.
160906_1035	Include resistor calculation in initial simulation propagation.
160909_1219	"Print interactive commands to log file.
		Read commands from batch file (source).
		Removed shortfile."
161013_1022	Ignore shorts at vth when gate is not calculated(ie. power. If actual leaks exist, they should be detected elsewhere).
161021_1301	"No voltage calculations for Hi-Z nets in any min/max queues.
		No leaks between Hi-Z nets."
161110_1402	When checking power families, check family intersect.
161116_1112	"Leak path between 2 Hi-Z nets should not be automatically ignored (only if related).
		When coping power, copy powerAliases and relativeSets
		Don't copy family when using macros (powerAlias should be sufficient)
		When checking relatives, check powerAliases too"
161116_1254	Don't do mos diode calculations for HI-Z voltages
161117_1005	"Reduce relative check time
		Standardize empty string checks"
161118_1233	"Copy family when using macros. (see 161116_1112)
		Only print unexpected power for possible problems (lower min voltage, higher max voltage)
		Display log file name at job end
		Remove short file message (unused)
		PrintEnvironment interactive command output to log file.
		Remove net progress on min/max queues
		Overwrite progress displays
		Changed progess print count logic(except event queue)
		Flush interactive output before new command"
161208_0148	Fixed bug that missed gate errors on tied output.
161219_2241	"Fixed loop with no default voltage for calculated voltages
		Switched line reset to print after instead of before"
161221_1201	"Changed unexpected mos diode errors to debug mode
		Don't calculate resistance for Hi-Z nets
		Display mismatched net error in detail"
170216_1137	Changed cvcrc.default -> default.cvcrc